--- a/app/src/main/res/layout/activity_add_incidence.xml
+++ b/app/src/main/res/layout/activity_add_incidence.xml
@@ -5,42 +5,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddIncidence">
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <EditText
             android:id="@+id/editTextTextPersonName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:ems="10"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:hint="Name"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/selectUrgenceText"
-            android:text="Urgencia"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:layout_column="0"
-            android:layout_row="1"
-            android:background="@color/white"
-            />
-        <Spinner
-            android:id="@+id/addIncidenceSpinner"
+        <GridLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:layout_gravity="center"
-            android:outlineAmbientShadowColor="@color/customBlue"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content" />
+            android:layout_gravity="center">
 
-    </GridLayout>
+            <TextView
+                android:id="@+id/selectUrgenceText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:text="Urgencia"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+            <Spinner
+                android:id="@+id/addIncidenceSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:outlineAmbientShadowColor="@color/customBlue"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </GridLayout>
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
