--- a/app/src/main/res/layout/activity_add_incidence.xml
+++ b/app/src/main/res/layout/activity_add_incidence.xml
@@ -12,7 +12,9 @@
         android:gravity="center"
 
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="128dp"
+        tools:layout_editor_absoluteY="251dp">
 
         <EditText
             android:id="@+id/editTextTextPersonName"
@@ -22,7 +24,8 @@
             android:gravity="center"
             android:hint="Name"
             android:inputType="textPersonName"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:layout_margin="10dp"/>
 
         <GridLayout
             android:layout_width="wrap_content"
@@ -35,9 +38,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@color/white"
-                android:text="Urgencia"
+                android:text="Urgence"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:layout_margin="10dp"/>
 
             <Spinner
                 android:id="@+id/addIncidenceSpinner"
@@ -45,12 +49,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:outlineAmbientShadowColor="@color/customBlue"
+                android:layout_margin="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
         </GridLayout>
+
+        <Button
+            android:layout_margin="10dp"
+            android:id="@+id/saveIncidenceButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SAVE" />
 
 
     </LinearLayout>
