--- a/app/src/main/res/layout/activity_show_incidences.xml
+++ b/app/src/main/res/layout/activity_show_incidences.xml
@@ -8,6 +8,7 @@
     <GridLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
